--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-<ul>
-  <li class="text" *ngFor="let item of items | async">
-    {{item.name}}
-  </li>
-</ul>
-
-<alert type="success">hello</alert>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-6">
+        <app-lista></app-lista> 
+    </div>
+    <div class="col-md-6">
+        <app-lista-add></app-lista-add>
+    </div>
+  </div>
+</div>
