--- a/src/app/components/lista/lista.component.html
+++ b/src/app/components/lista/lista.component.html
@@ -3,6 +3,38 @@
   <div class="float-right" (click)="eliminar(item)">
     <i class="far fa-trash-alt"></i>
   </div>
+  <div class="float-right mx-3" (click)="editar(item)" data-toggle="modal" data-target="#exampleModalLong">
+    <i class="fas fa-user-edit"></i>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Editar: {{editarItem.name}}</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form (ngSubmit)="agregarItemEditado()">
+          <!--es de vital inportancia colocar el name por que es el
+             name que va en lista-add.ts -->
+          <input 
+          type="text" placeholder="Edita la tarea" 
+          name="name" class="form-control"
+          [(ngModel)]="editarItem.name"
+          >
+          <button class="btn-btn-warning mt-3" tupe="submit">Editar</button>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
 </div>
 
 <!-- NO HE CONSEGUIDO IMPORTAR AWESOME CON NPM, ESTÁ 
